unpackaged/main/default/objects/Location/fields/cegidStoreCode__c.field-meta.xml
<CustomField>
    <fullName>cegidStoreCode__c</fullName>
    <description>CEGID Store code</description>
    <label>CEGID Store Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>