unpackaged/main/default/objects/Location/fields/cegidWarehouseCode__c.field-meta.xml
<CustomField>
    <fullName>cegidWarehouseCode__c</fullName>
    <label>CEGID Warehouse Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>