unpackaged/main/default/objects/Location/fields/ConvertSkuTo10d__c.field-meta.xml
<CustomField>
    <fullName>ConvertSkuTo10d__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this location works with 10 digits SKU, the 8 digits SKU must be converted to 10 digits using V3 data
available in eFulfilment_StockImage_Global</description>
    <label>10 digits SKU</label>
    <type>Checkbox</type>
</CustomField>