unpackaged/main/default/objects/Location/fields/CustomCountry__c.field-meta.xml
<CustomField>
    <fullName>CustomCountry__c</fullName>
    <label>Custom Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>