unpackaged/main/default/objects/Location/fields/EdicomDestination__c.field-meta.xml
<CustomField>
    <fullName>EdicomDestination__c</fullName>
    <label>Edicom Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>