unpackaged/main/default/objects/Location/fields/EdicomSchemaSuffix__c.field-meta.xml
<CustomField>
    <fullName>EdicomSchemaSuffix__c</fullName>
    <label>Edicom Schema Suffix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>