unpackaged/main/default/objects/Location/fields/V3_warehouse_code__c.field-meta.xml
<CustomField>
    <fullName>V3_warehouse_code__c</fullName>
    <description>Called Werk in V3</description>
    <inlineHelpText>Including Proxis</inlineHelpText>
    <label>V3 warehouse code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>JP</fullName>
            </value>
            <value>
                <fullName>KR</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>