unpackaged/main/default/objects/Location/fields/WmsFilePath__c.field-meta.xml
<CustomField>
    <fullName>WmsFilePath__c</fullName>
    <label>File Path WMS</label>
    <type>TextArea</type>
</CustomField>