unpackaged/main/default/objects/Location/fields/WmsFoFileDestination__c.field-meta.xml
<CustomField>
    <fullName>WmsFoFileDestination__c</fullName>
    <description>Defines if the FO file will be sent to the SFTP or the Azure Storage</description>
    <label>FO File Destination WMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AzureFolder</fullName>
            </value>
            <value>
                <fullName>FTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>