unpackaged/main/default/objects/Location/fields/WmsFoFileNamePrefix__c.field-meta.xml
<CustomField>
    <fullName>WmsFoFileNamePrefix__c</fullName>
    <description>Field to define the prefix of the file&#39;s name generated and sent to WMS</description>
    <label>FO File Name Prefix WMS</label>
    <length>16</length>
    <type>Text</type>
</CustomField>