unpackaged/main/default/objects/Location/listViews/all_locations.listView-meta.xml
<ListView>
    <fullName>all_locations</fullName>
    <columns>Name</columns>
    <columns>LocationType</columns>
    <columns>VisitorAddress</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Locations</label>
</ListView>